--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 /* Start Global Rules */
 :root {
-    --main-color : #A460ED ;
+    --purple-color : #A460ED ;
+    --grey-color : #888 ;
+    --red-color : #f44336 ;
 }
 * {
     box-sizing: border-box;
@@ -26,7 +28,7 @@ min-height: 100vh;
 }
 /* start sidebar */
 .sidebar {
-    width: 210px;
+    width: 240px;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
 .sidebar .logo {
@@ -41,6 +43,11 @@ min-height: 100vh;
     height: 2px;
     background-color: white;
     bottom: -20px;
+}
+@media (max-width: 768px) {
+    .sidebar .logo::before {
+        width: 100%;
+    } 
 }
 .sidebar .logo i {
     font-size: 24px;
@@ -92,10 +99,13 @@ min-height: 100vh;
 .sidebar ul li a:hover ,
 .sidebar ul li a.active {
     background-color: #F1F5F9;
-    color: var(--main-color);
+    color: var(--purple-color);
 }
 .sidebar ul li a i {
     margin-right: 8px;
+}
+.sidebar ul li a span {
+    text-transform: capitalize;
 }
 @media (max-width:768px ) {
 .sidebar {
@@ -110,3 +120,54 @@ min-height: 100vh;
 }
 }
 /* end sidebar */
+/* start contant head  */
+.content {
+overflow: hidden;
+z-index: 2;
+}
+.head .search::before {
+    font-family: "Font Awesome 6 Free";
+    content: "\f002";
+    font-weight: 900;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 15px;
+    color: var(--grey-color);
+}
+.head .search input {
+margin-left: 5px;
+padding-left: 30px;
+height: 40px;
+width: 172px;
+transition: width .3s;
+text-transform: capitalize;
+font-size: 14px;
+}
+.head .search input:focus {
+    width: 200px;
+    border: 1px solid var(--purple-color);
+}
+.head .search input::placeholder {
+    color: var(--purple-color);
+}
+.head .search input:focus::placeholder {
+    opacity: 0;
+}
+.head .icons .notifications::before {
+content: "";
+width: 10px;
+height: 10px;
+background-color: var(--red-color);
+position: absolute;
+border-radius: 50%;
+right: -5px;
+top: -5px;
+}
+.head .icons img {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    margin-left: 15px;
+}
+/* end contant head  */
