--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
     --purple-color : #A460ED ;
     --grey-color : #888 ;
     --red-color : #f44336 ;
+    --green-color: #ADDDD0 ;
 }
 * {
     box-sizing: border-box;
@@ -11,6 +12,18 @@
 }
 *:focus {
     outline: none;
+}
+::-webkit-scrollbar {
+    width: 15px;
+}
+::-webkit-scrollbar-track {
+    background-color: white;
+}
+::-webkit-scrollbar-thumb {
+    background-color: var(--purple-color);
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--green-color);
 }
 body {
     font-family: 'Open Sans', sans-serif;
@@ -166,8 +179,103 @@ top: -5px;
 }
 .head .icons img {
     width: 32px;
-    height: 32px;
+    height: 32px ;
     border-radius: 50%;
     margin-left: 15px;
 }
 /* end contant head  */
+.page h1 {
+    margin: 20px 20px 40px;
+}
+.page h1::before ,
+.page h1::after {
+content: "";
+position: absolute;
+height: 3px;
+left: 0;
+bottom: -10px;
+}
+.page h1::before  {
+background-color: white;
+width: 120px;
+}
+.page h1::after {
+background-color: black;
+width: 40px;
+}
+.wrapper {
+    grid-template-columns: repeat(auto-fill , minmax(350px,1fr));
+    margin-left: 20px;
+    margin-right: 20px;
+}
+@media (max-width : 768px) {
+.wrapper {
+    grid-template-columns: minmax(200px,1fr);
+    margin-left: 10px;
+    margin-right: 10px;
+}
+}
+/*start welcome widget */
+.welcome {
+    overflow: hidden;
+}
+.welcome .intro {
+   margin-bottom: 20px;
+}
+@media (max-width: 767px) {
+    .welcome .intro {
+        padding-bottom: 30px;
+    }
+}
+.welcome .intro img {
+    width: 200px;
+    margin-bottom: -10px;
+}
+.welcome .avatar {
+width: 64px;
+height: 64px;
+border: 5px solid white;
+margin-top: -52px;
+border-radius: 50%;
+margin-left: 20px;
+box-shadow: 0 0 15px #eee;
+}
+@media (max-width: 767px) {
+    .welcome .avatar {
+margin-left: 0;
+    }
+}
+.welcome .body {
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+}
+.welcome .body > div  {
+flex: 1;
+}
+.welcome .visit {
+margin: 15px 15px 15px auto;
+display: flex;
+font-weight: bold;
+padding: 5px;
+justify-content: flex-end;
+transition: .3s;
+cursor: pointer;
+}
+.welcome .visit:hover {
+    background-color: var(--green-color);
+}
+/* End Welcome Widget */
+/* Start Quick Draft Widget */
+.quick-draft textarea {
+resize: none;
+min-height: 180px;
+}
+.quick-draft .save {
+margin-left: auto;
+transition: .3s;
+cursor: pointer;
+}
+.quick-draft .save:hover {
+    background-color: var(--green-color);
+}
+/* End Quick Draft Widget */
