--- a/css/framework.css
+++ b/css/framework.css
@@ -8,7 +8,7 @@ display: flex;
 .align-center {
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
 }
 .d-grid {
     display: grid;
@@ -44,6 +44,9 @@ display: flex;
 .pb-15 {
     padding-bottom: 15px;
 }
+.pl-15 {
+    padding-left: 15px;
+}
 .p-20 {
     padding: 20px;
 }
@@ -68,8 +71,17 @@ display: flex;
 .mb-10 {
     margin-bottom: 10px;
 }
+.mr-15 {
+    margin-right: 15px;
+}
 .m-20 {
     margin: 20px;
+}
+.mt-20 {
+    margin-top: 20px;
+}
+.mb-20 {
+    margin-bottom: 20px;
 }
 .mr-20 {
     margin-right: 20px;
@@ -82,6 +94,15 @@ display: flex;
 }
 .mt-10 {
     margin-top: 10px;
+}
+.mt-15 {
+    margin-top: 15px;
+}
+.mr-15 {
+    margin-right: 15px;
+}
+.mt-25 {
+    margin-top: 25px;
 }
 /* end padding + margin  */
 /* start color*/
@@ -102,6 +123,9 @@ display: flex;
 }
 .bg-orange{
     background-color: #fd9c00;
+}
+.bg-red{
+    background-color: #f44336 ;
 }
 .c-pink {
 color: #FF87CA;
@@ -134,6 +158,9 @@ position: absolute;
 }
 /*end position */
 /* start width and height */
+.h-full {
+    height: 100%;
+}
 .w-full {
     width: 100%;
 }
@@ -160,6 +187,9 @@ position: absolute;
 /* start border  */
 .border-1 {
 border: 1px solid #ccc;
+}
+.br-half {
+    border-radius: 50%;
 }
 .br-10 {
     border-radius: 10px;
