--- a/css/framework.css
+++ b/css/framework.css
@@ -59,6 +59,9 @@ display: flex;
 .mt-0 {
     margin-top: 0;
 }
+.mb-0 {
+    margin-bottom: 0;
+}
 .mt-5 {
     margin-top: 5px;
 }
@@ -70,6 +73,12 @@ display: flex;
 }
 .mb-10 {
     margin-bottom: 10px;
+}
+.m-15 {
+    margin: 15px;
+}
+.mb-15 {
+    margin-bottom: 15px;
 }
 .mr-15 {
     margin-right: 15px;
@@ -185,9 +194,12 @@ position: absolute;
 }
 /* end compounands */
 /* start border  */
-.border-1 {
+.border-ccc {
 border: 1px solid #ccc;
 }
+.border-bottom {
+    border-bottom: 1px solid #ccc;
+    }
 .br-half {
     border-radius: 50%;
 }
@@ -197,7 +209,7 @@ border: 1px solid #ccc;
 .br-6 {
     border-radius: 6px;
 }
-.br-none {
+.border-none {
     border: none;
 }
 /* end border  */
@@ -212,6 +224,9 @@ border: 1px solid #ccc;
 }
 .txt-c {
     text-align: center;  
+}
+.fs-13 {
+    font-size: 13px;
 }
 .fs-14 {
     font-size: 14px;
